Fixed white background on scrollbars

--- a/xm8-server/frontend/sass/grid.scss
+++ b/xm8-server/frontend/sass/grid.scss
@@ -5,6 +5,12 @@
 .centercolumn{
   float:none;
   overflow: hidden;
+
+  ::-webkit-scrollbar-corner,
+  ::-webkit-scrollbar
+  { 
+    background: transparent;  
+  }  
 }
 .rightcolumn{
   float: right;
